[metadata]
name = synthsurf
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Surface-based image synthesis
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/synthsurf

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    jitfields @ git+https://github.com/balbasty/jitfields
    nibabel
    numpy

[options.extras_require]
plotly = plotly
matplotlib = matplotlib
plot =
    plotly
    matplotlib
